--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,24 @@ nav .link {
 }
 
 /* Hero */
+.hero {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+    to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  ),
+
+    url("../images/Imgback.jpg");
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+}
 
 .hero {
   background-color: var(--black-background);
