--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@
 
   --card-set-gap: 30px;
 
+  --icon-color: rgba(175, 177, 184, 1);
+
+
 }
 
 html {
@@ -167,12 +170,37 @@ nav .link {
 
   text-decoration: none;
 
+
+  display: flex;
+  align-items: center;
+
 }
 
 .auth-nav .link:hover,
 .auth-nav .link:focus {
   color: var(--blue-text);
 }
+
+
+.icon-envelop {
+  width: 16px;
+  height: 12px;
+  
+  margin-right: 10px;
+
+  fill: currentColor;
+  
+}
+
+
+.icon-smartphone {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+
+  fill: currentColor;
+}
+
 
 /* Hero */
 .hero {
@@ -229,6 +257,10 @@ nav .link {
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
+  letter-spacing: 1.3px;
+
+  border: none;
+  border-radius: 4px;
 }
 
 .filtr-button {
@@ -272,6 +304,7 @@ nav .link {
 
 .advantages-list .item {
   width: 270px;
+
   
 }
 
@@ -281,12 +314,41 @@ nav .link {
 
 }
 
+.advantages-image {
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  
+  display: flex;
+
+  background-color: var(--grey-background);
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.icon-advantages {
+  width: 70px;
+  height: 70px;
+}
+
+/* .icon-advantages {
+  width: 270px;
+  height: 120px;
+  background-color: var(--grey-background);
+  border-radius: 4px;
+ 
+} */
+
 .advantages-text {
   margin: 0;
 }
 
 .advantages-title {
-  margin-top: 0;
+  margin-top: 0px;
   margin-bottom: 10px;
 }
 
@@ -366,6 +428,13 @@ nav .link {
   
 }
 
+.team-list .item {
+  background-color: var(--white-text);
+
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
+}
+
 .team-list {
   padding-bottom: 0px;
   padding-left: 0;
@@ -400,6 +469,44 @@ nav .link {
 .team-text {
   text-align: center;
 }
+
+
+.social-list {
+  padding: 16px 32px 30px;
+  display: flex;
+}
+
+.social-link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  background-color: var(--white-text);
+  
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--blue-text);
+  
+}
+
+.social-icons {
+
+  fill: var(--icon-color);
+  
+  width: 20px;
+  height: 20px;
+}
+
+.social-icons:hover,
+.social-icons:focus {
+  fill: var(--white-text);
+}
+
 
 /* Cards */
 
@@ -479,6 +586,24 @@ h2 .text-cards {
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
+
+/* CLIENTS */
+
+.title-clients {
+  
+  text-align: center;
+  justify-content: center;
+  margin-top: 0;
+  margin-bottom: 50px;
+
+  color: var(--black-text);
+
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+}
+
 
 /* Futer */
 
